--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"classnames": "^2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@types/chrome": "^0.0.253",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
