--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
+	"types": ["chrome"],
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
